Issue/17 tutorials (#19)
* Add Searchbar

* Add Searchbar

* Implement Tutorial display card

* Add Create Tutorial, become Moderator blocks

* Update Tutorials.vue

* Fix layout issues with short height pages

Use vue-bootstrap `b-sidebar` and `b-container` in order to take advantage of Bootstrap responsiveness.

--- a/client-app/src/assets/css/main.css
+++ b/client-app/src/assets/css/main.css
@@ -10,14 +10,6 @@
   --dark-font-colour: #1b1b1b;
 }
 
-.activenavbar{
-  width: calc(100% - 200px) !important;
-  position: relative;
-  left:200px;
+html, body, #app, .app {
+  min-height: 100vh;
 }
-.home{
-  position: relative;
-  top:50px;
-  height:100vh;
-}
-
